# study-pilot

./: .dockerignore  .gitattributes  .gitignore  README.md  README_ARCHITECTURE_AUDIT.md  RUN.md  SYSTEM_ELITE_AUDIT.md  StudyPilot.sln  StudyPilot.slnx
Prompts/: Promt1.md  Promt10.md  Promt11.md  Promt12.md  Promt13.md  Promt2.md  Promt3.md  Promt4.md  Promt5.md  Promt6.md  Promt7.md  Promt8.md  Promt9.md  RUN.md
config/: ai.env.example
deploy/: .env.example  docker-compose.yml
docs/: BACKEND_IMPROVEMENTS.md
scripts/: create-learning-intelligence-tables.sql  e2e-mock-test.sh  e2e-ollama-ai-only.py  (+9 more)
study-pilot-ai/: .env.example  Dockerfile  pyproject.toml  requirements.txt
study-pilot-ai/app/: main.py
study-pilot-ai/app/api/: routes.py
study-pilot-ai/app/core/: config.py  exceptions.py
study-pilot-ai/app/models/: __init__.py  schemas.py
study-pilot-ai/app/prompts/: __init__.py  chat_prompt.py  extract_concepts_prompt.py  generate_quiz_prompt.py  tutor_prompt.py
study-pilot-ai/app/providers/: __init__.py  base.py  deepseek_provider.py  fallback_adapter.py  gemini_provider.py  mock_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  parse_utils.py  provider_health.py
study-pilot-ai/app/routing/: __init__.py  config_loader.py  provider_health.py  provider_metrics.py  provider_router.py  routing_policy.py
study-pilot-ai/app/services/: __init__.py  chat_service.py  concept_service.py  embedding_service.py  quiz_service.py  tutor_service.py
study-pilot-ai/config/: providers.yaml
study-pilot-ai/tests/: test_health.py
(+480 files in other folders)
